Get rid of that "page is too wide" bug.

--- a/bodhi/static/css/site.css
+++ b/bodhi/static/css/site.css
@@ -21,3 +21,7 @@ a:hover {
     color: white;
     text-decoration: none;
 }
+
+.row {
+    margin-right: 0px;
+}
